# turntable

./: .gitignore  Cargo.toml  compose-dev.yml  scripts.nu
.bruno/turntable-server/: bruno.json  collection.bru
.bruno/turntable-server/auth/: login.bru  logout.bru  register.bru  user.bru
.bruno/turntable-server/environments/: dev.bru  prod.bru
.bruno/turntable-server/events/: event_stream.bru
.bruno/turntable-server/rooms/: add_to_queue.bru  create_invite.bru  create_room.bru  create_stream_key.bru  invite_by_token.bru  join_with_invite.bru  list_rooms.bru  perform_room_action.bru  queue.bru  room.bru  stream_keys.bru
.bruno/turntable-server/streaming/: Gets a live audio stream using a stream token-.bru
assets/: harmor.flac  short.flac
src/: db.rs  events.rs  ffmpeg.rs  logging.rs  main.rs  store.rs  util.rs  ytdl.rs
src/audio/: buffering.rs  decoding.rs  encoding.rs  events.rs  input.rs  loading.rs  mod.rs  playback.rs  processing.rs  queuing.rs  router.rs  routes.rs  source.rs  stream.rs  timeline.rs  track.rs  util.rs
src/auth/: mod.rs  router.rs  session.rs  user.rs
src/discord/: audio.rs  bot.rs  compat.rs  mod.rs  util.rs  voice.rs
src/http/: mod.rs  stream.rs
src/ingest/: events.rs  ffmpeg.rs  input.rs  loading.rs  mod.rs  sink.rs
src/ingest/input/: mod.rs  wavedistrict.rs  youtube.rs
src/queue/: events.rs  mod.rs  store.rs
src/rooms/: connection.rs  events.rs  mod.rs  room.rs  router.rs  store.rs
src/server/: mod.rs  sse.rs  ws.rs
src/track/: mod.rs
turntable-collab/: Cargo.toml
turntable-collab/.sqlx/: query-074f21df675ba951369c42e911856b4426873fbcc076a97640aa2e64b35a1fba.json  query-10277bd622c23a6845581b5a55714593faf811f9b13cc55a0cc56b10a25a073d.json  query-1e39c7ade6ba63d9ddf08373342aecef04dd3628fcdd05098885894f51af0a92.json  query-204e5d8824074ca9550e5be2db5084fb21aec9bf2c8e7813fe631b412759a4f4.json  query-23bf675a416d5ee7252ca9ba5dcbd09059590e3a151e8f6ae50ea8d8fcd7cc16.json  query-308e5036315bbc3571395117674b89ca28c4b8c6eb59598b5ff3b632f5de58ef.json  query-3d3adbd5a4b47d2e573e531f66a809046e55ef9e9f444f55192c33b5a43e3796.json  query-4e80572d665be73a2ee972bdbac81862c45181089c123005b380e78f9f9ee4bd.json  query-570dc6d28f7753966902e6129bf833700fb56cc637362a676ed6c8108225a9e0.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-63b977c7ee813ec5a7acb37f45a91a390c71a0a392173661a9def837f7cd37dc.json  query-6a6bec68b35012df41e6bb99b5afc11a90e3404fa29698fb04fa3ad18ad2025b.json  query-6e11c14f88d718bae4d6db684fff4558fad4dec88e8a0b7f7a45d5fbb7cae9a1.json  query-7d3d47e970b09722bcbdf26420e3483a1402ae5edc87b3ba335c54d665565d16.json  query-83434e018c00090f833a059dddd49b5c3e01469bfae17983c5d75d828c395de0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-850b624330409d69d8ec04588120ada7ff6f7d85705e99b4d861862794f2f137.json  query-9611e66d757a11ccf611a95a2580d84c2eb56653b8dc2678ddc89e53101774df.json  query-98dace2b198f5b2933179949bb9835e79588801d12f3efa1955b80aa9e0f9839.json  query-a208618203d20f57e185df6d9982a0a24577e29990a14f30697567afb0bcee84.json  query-b118d9d8d2e4bf58ce2f47cf3c3087b9070fff1faac317df73ca6cca9404ecc6.json  query-bca111bf0d7354e34678b81605cda681801360f32b72b977e2fd9d8105f0c3c9.json  query-c3e0be93bf129a0ce4126a6d4c25da01e4c50f3cbe93e692c4d308f2e6fe1bbe.json  query-c5e36e41cde674448297a34b59993cac7ba541073e1bc535faa2d26a2a59c8a1.json  query-c86a9fb3acec3de7b3b8316769aa88fb3dc0f965ccd61200dd679d9fcb8afdeb.json  query-d85f02c81db3d6ef01bdc70c49db1429bf94907a1d7fe0288e6b8f893c491dd6.json  query-df33f651f1382466cbee99be917d1309993da50daa0808340e07b7bb8c22f82e.json  query-dfb3b8cf5dc4713879965564fd6d0539f1c01eadcbc8a862e87bc1d15448136c.json  query-f03b3d31453ecfdcaa52778f65873f0bfbfe543943a6e693fe18372e33f576a3.json
turntable-collab/migrations/: 20240629181056_init.sql
turntable-collab/src/: auth.rs  events.rs  lib.rs  track.rs  util.rs
turntable-collab/src/db/: data.rs  mod.rs  pg.rs
turntable-collab/src/input/: file.rs  mod.rs  wavedistrict.rs  youtube.rs
turntable-collab/src/queues/: linear_queue.rs  mod.rs
turntable-collab/src/rooms/: connection.rs  mod.rs  room.rs
turntable-core/: Cargo.toml
turntable-core/src/: config.rs  events.rs  implementations.rs  lib.rs  util.rs
turntable-core/src/implementors/: encoders.rs  loadables.rs  mod.rs  queues.rs  symphonia.rs
turntable-core/src/ingestion/: loading.rs  mod.rs  sink.rs
turntable-core/src/output/: consumer.rs  encoder.rs  mod.rs  stream.rs
turntable-core/src/playback/: mod.rs  player.rs  timeline.rs
turntable-core/src/queuing/: mod.rs  queue.rs  queue_item.rs
turntable-core/src/util/: buffer.rs  ext.rs  id.rs  introspection.rs  mod.rs
turntable-impls/: Cargo.toml
turntable-impls/src/: lib.rs
turntable-impls/src/encoders/: mod.rs  wave_encoder.rs
turntable-impls/src/ingestions/: mod.rs  symphonia_ingestion.rs
turntable-impls/src/loadables/: loadable_file.rs  loadable_network_stream.rs  mod.rs
turntable-server/: Cargo.toml
turntable-server/src/: auth.rs  context.rs  docs.rs  errors.rs  lib.rs  rooms.rs  schemas.rs  serialized.rs  sse.rs  streaming.rs
