[package]
name = "vinyl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.96"

tower-http = { version = "0.4.0", features = ["cors"]}
axum = { version = "0.6.18", features = ["ws", "tracing", "macros"] }
hyper = { version = "0.14", features = ["stream"] }
reqwest = {version = "0.11.13", features = ["blocking", "json"]}

fern = { version = "0.6.1", features = ["colored"] }
surrealdb = "1.0.0-beta.9"
futures-util = "0.3.28"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
thiserror = "1.0.40"
spin_sleep = "1.1.1"
crossbeam = "0.8.1"
futures = "0.3.28"
anyhow = "1.0.58"
scrypt = "0.11.0"
dashmap = "5.4.0"
colored = "2.0.0"
ringbuf = "0.2.8"
fundsp = "0.6.4"
rand = "0.8.5"
log = "0.4.17"
chrono = "0.4"
ron = "0.7"
regex = "1"
