[package]
name = "turntable"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turntable-core = { path = "turntable-core" }
turntable-collab = { path = "turntable-collab" }
turntable-server = { path = "turntable-server" }

chrono = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

fern = { version = "0.6.1", features = ["colored"] }
colored = "2.1.0"
dotenvy = "0.15.7"

[workspace]
members = [
  "turntable-collab",
  "turntable-core",
  "turntable-impls",
  "turntable-server",
]

[workspace.dependencies]
log = "0.4.22"

dashmap = "5.5.3"
crossbeam = "0.8.4"
thiserror = "1.0.61"
parking_lot = "0.12.3"
rand = "0.8.5"
chrono = "0.4.38"

async-trait = "0.1.80"
futures-util = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }

serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
