[package]
name = "turntable-impls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turntable-core = { path = "../turntable-core" }

symphonia = { version = "0.5.4", features = ["all"] }

async-trait = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
