[package]
name = "turntable-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
aide = { version = "0.13.4", features = ["axum"] }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
