[package]
name = "turntable-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turntable-collab = { path = "../turntable-collab" }
turntable-core = { path = "../turntable-core" }

schemars = "0.8.21"
axum = { version = "0.7.5", features = ["macros"] }
aide = { version = "0.13.4", features = ["axum"] }
tower-http = { version = "0.5.2", features = ["cors"] }

tokio = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
